--- a/Amazing Prices/task/src/style.css
+++ b/Amazing Prices/task/src/style.css
@@ -1,71 +1,143 @@
-* {
+body {
     margin: 0;
     padding: 0;
-}
-
-html, body {
-    height: 100%; /* Use full height of viewport */
-}
-
-body {
-    font-family: 'Inter', sans-serif;
-    background-color: gainsboro;
-    display: flex;
-    flex-direction: column;
-}
-
-.wrapper {
     width: 100%;
-    max-width: 1024px;
-    margin: 0 auto;
-    box-sizing: border-box;
-    flex-grow: 1; /* Allow the wrapper to grow to fill remaining space */
+    height: 100%;
+    flex-shrink: 0;
 }
 
-.header, .footer {
-    border-bottom: 1px solid black;
-    height: 61px;
-    display: flex;
-    justify-content: space-between;
-    background-color: white;
-    align-items: center;
-    padding: 0 22px;
-    font-size: 16px;
-    position: sticky;
-    top: 0;
-    z-index: 999;
-}
-
-.nav {
-    width: 357px;
-    display: flex;
-    justify-content: space-between;
-    font-weight: 500;
-}
-
-.product_anchor {
-    font-weight: 700;
-}
-
-a {
-    text-decoration: none;
+* {
+    font-family: Inter, sans-serif;
     color: black;
 }
 
-.main {
-    background-color: lightskyblue;
-    flex-grow: 1;
-    min-height: calc(100% - 122px); /* Subtract header and footer heights */
+.anchor {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration: none;
 }
 
-.footer {
-    border-bottom: none;
-    border-top: 1px solid black;
-    flex-shrink: 0; /* Prevent footer from shrinking */
+header, footer {
+    display: flex;
+    align-items: center;
+    height: 5vh;
+    flex-shrink: 0;
+    background: white;
 }
 
-.nav_footer {
+header {
+    border-bottom: 1px solid black;
+    justify-content: space-between;
+}
+
+nav {
     display: flex;
     justify-content: space-between;
-    width: 690px;
+    margin-right: 20px;
+}
+
+nav a {
+    margin-left: 16px;
+    margin-right: 16px;
+}
+
+#nav-brand {
+    margin-left: 20px;
+}
+
+footer {
+    border-top: 1px solid black;
+    justify-content: space-around;
+}
+
+main {
+    background: white;
+    height: 80vh;
+}
+
+main > section {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+section:first-child {
+    text-align: center;
+    width: 440px;
+    margin-top: 20px;
+}
+section:last-child {
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+}
+
+section > h1 {
+    margin: 10px;
+    font-size: 48px;
+}
+
+section > p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.card {
+    width: 200px;
+    height: 250px;
+    flex-shrink: 0;
+    border-radius: 10px;
+    border: 1px solid black;
+    background: #F5F5F5;
+    margin-left: 40px;
+    margin-right: 40px;
+    text-align: center;
+}
+
+.card-header {
+    border-bottom: 1px solid black;
+}
+
+h4 {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.card-body > h3 {
+    margin: 10px;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.card-body > p {
+    margin: 5px;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.card-body > button {
+    width: 130px;
+    height: 35px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    background: #C0E8FF;
+    text-align: center;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
